# fast-concat

./: Cargo.toml  README.md
.github/workflows/: correctness.yml  format.yml  lints.yml  tests.yml
benches/: concat.rs
fast-concat/: Cargo.toml  README.md
fast-concat-macro/: Cargo.toml
fast-concat-macro/src/: lib.rs
fast-concat/benches/: concat.rs
fast-concat/src/: lib.rs
macro/: Cargo.toml
macro/src/: fast_concat_parser.rs  lib.rs
src/: concat_paths_parser.rs  concat_strings_parser.rs  fast_concat_parser.rs  lib.rs  util.rs
tests/: tests.rs
