[package]
name = "concat-x"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.69"

[dev-dependencies]
concat-string = "1.0.1"
string_concat = "0.0.1"
criterion = { version = "0.5.1", features = ["html_reports"] }