[package]
name = "fast-concat"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.90", default-features = false, features = ["full"] }
quote = {  version = "1.0.37", default-features = false }
proc-macro2 = { version = "1.0.92", default-features = false }

[dev-dependencies]
concat-string = "1.0.1"
string_concat = "0.0.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
constcat = "0.5.1"

[[bench]]
name = "concat"
harness = false