[package]
name = "fast-concat-macro"
version = "1.0.2"
edition = "2021"
authors = ["Leonard D."]
description = "Procedural macro for fast-concat."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tigerros/fast-concat"
categories = ["no-std", "rust-patterns"]
keywords = ["concat", "string"]
include = ["src"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full"] }
