[package]
name = "fast-concat"
version = "1.0.2"
edition = "2021"
authors = ["Leonard D."]
description = "Fastest macro for concatenating strings."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tigerros/fast-concat"
categories = ["no-std", "rust-patterns"]
keywords = ["concat", "string"]
include = ["src", "README.md"]

[dependencies]
fast-concat-macro = { path = "../fast-concat-macro" }

[dev-dependencies]
string_concat = "0.0.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
constcat = "0.6.0"

[[bench]]
name = "concat"
harness = false